POWR-63 Hiding Programs label

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -12,7 +12,7 @@ mode: default
 content:
   field_programs:
     weight: -4
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
