--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_summary
+    - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
   module:
     - path
@@ -11,6 +13,23 @@ targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_summary:
+    weight: 31
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
+  field_topics:
+    weight: 32
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   label:
     type: string_textfield
     weight: -5
