--- a/web/sites/default/config/block.block.views_block__services_related_taxonomy_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__services_related_taxonomy_block_1.yml
@@ -1,10 +1,11 @@
-uuid: a3d25cd6-c186-4102-ac89-49263a0747c2
+uuid: 9abc3925-bb7a-469c-b437-cbc4ee77a55b
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.services_related_taxonomy
   module:
+    - ctools
     - node
     - views
   theme:
@@ -17,13 +18,19 @@ provider: null
 plugin: 'views_block:services_related_taxonomy-block_1'
 settings:
   id: 'views_block:services_related_taxonomy-block_1'
-  label: 'Related Services'
+  label: ''
   provider: views
   label_display: visible
-  views_label: 'Related Services'
+  views_label: ''
   items_per_page: none
-  context_mapping: {  }
 visibility:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    bundles:
+      city_service: city_service
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
   node_type:
     id: node_type
     bundles:
