--- a/web/sites/default/config/views.view.services_related_taxonomy.yml
+++ b/web/sites/default/config/views.view.services_related_taxonomy.yml
@@ -1,15 +1,16 @@
-uuid: 70746027-4491-4144-b917-c1b75600c1e1
+uuid: 129caf34-75eb-4cd9-b131-974f4314f10b
 langcode: en
 status: true
 dependencies:
   config:
     - node.type.city_service
+    - taxonomy.vocabulary.topics
   module:
     - node
     - taxonomy
     - user
 id: services_related_taxonomy
-label: 'Services Related by Taxonomy'
+label: 'Services related by taxonomy'
 module: views
 description: ''
 tag: ''
@@ -49,19 +50,13 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 5
           offset: 0
       style:
         type: default
       row:
         type: fields
-        options:
-          default_field_elements: true
-          inline: {  }
-          separator: ''
-          hide_empty: false
       fields:
         title:
           id: title
@@ -147,6 +142,7 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+          group: 1
       sorts:
         title:
           id: title
@@ -166,34 +162,24 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        field_topics:
-          id: field_topics
-          table: node__field_topics
-          field: field_topics
-          relationship: none
-          group_type: group
-          admin_label: 'field_topics: Taxonomy term'
-          required: true
-          plugin_id: standard
+      relationships: {  }
       arguments:
-        field_topics_target_id:
-          id: field_topics_target_id
-          table: node__field_topics
-          field: field_topics_target_id
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
           relationship: none
           group_type: group
           admin_label: ''
-          default_action: 'not found'
+          default_action: default
           exception:
             value: all
             title_enable: false
             title: All
           title_enable: false
           title: ''
-          default_argument_type: fixed
-          default_argument_options:
-            argument: ''
+          default_argument_type: node
+          default_argument_options: {  }
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -210,9 +196,57 @@ display:
             fail: 'not found'
           validate_options: {  }
           break_phrase: false
-          not: false
-          plugin_id: numeric
+          not: true
+          entity_type: node
+          entity_field: nid
+          plugin_id: node_nid
+        tid:
+          id: tid
+          table: taxonomy_index
+          field: tid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: taxonomy_tid
+          default_argument_options:
+            node: true
+            limit: true
+            vids:
+              topics: topics
+            anyall: ','
+            term_page: '0'
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          add_table: true
+          require_value: false
+          reduce_duplicates: false
+          plugin_id: taxonomy_index_tid
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -229,8 +263,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      block_description: 'Services Related by Taxonomy'
-      block_category: Content
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
