--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -76,6 +76,8 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  redirect: 0
+  redirect_404: 0
   schemata: 0
   schemata_json_schema: 0
   search_api: 0
