POWR-50: Refactored Bureau/Office Summary field to use standard text field so length can be limited, added textarea_widget_for_text so that textarea widget can be used with plain text field.

--- a/web/sites/default/config/field.field.group.bureau_office.field_summary.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_summary.yml
@@ -1,4 +1,4 @@
-uuid: b1cf940f-180d-455a-a2a3-ee43a1dbdb88
+uuid: 11ebaba0-2ca8-494d-9c07-2eae7ee6d660
 langcode: en
 status: true
 dependencies:
@@ -10,10 +10,10 @@ field_name: field_summary
 entity_type: group
 bundle: bureau_office
 label: Summary
-description: 'Brief description of bureau/office from a community point of view'
+description: 'Brief description of bureau/office from a community point of view (300 character limit)'
 required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string_long
+field_type: string
