--- a/web/sites/default/config/field.storage.group.field_summary.yml
+++ b/web/sites/default/config/field.storage.group.field_summary.yml
@@ -1,4 +1,4 @@
-uuid: e557f276-b69c-48cb-b6c8-ba65c9694d38
+uuid: eba1ddeb-c286-4cdc-a89e-c866b78c4897
 langcode: en
 status: true
 dependencies:
@@ -7,8 +7,10 @@ dependencies:
 id: group.field_summary
 field_name: field_summary
 entity_type: group
-type: string_long
+type: string
 settings:
+  max_length: 300
+  is_ascii: false
   case_sensitive: false
 module: core
 locked: false
