--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -12,11 +12,12 @@ bundle: bureau_office
 mode: default
 content:
   field_summary:
-    weight: -4
+    weight: -2
     label: above
-    settings: {  }
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-    type: basic_string
+    type: string
     region: content
   field_topics:
     weight: -3
