--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/textarea_widget_for_text": "^1.1",
         "drupal/views_bootstrap": "^3.0",
         "drush/drush": "^8.0",
         "roave/security-advisories": "dev-master",
