Added patch for node:group:title or node:group:[fieldname]

--- a/composer.json
+++ b/composer.json
@@ -110,6 +110,10 @@
           "drupal/pathauto": {
             "2950701 - Revert change of execution order":
               "https://www.drupal.org/files/issues/2018-04-10/pathauto-revert-2950701-13.patch"
+          },
+          "drupal/group": {
+            "2774827 - node:group functionality for adding node:group:title":
+              "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch"
           }
         },
         "merge-plugin": {
