--- a/web/modules/contrib/lightning_core/composer.json
+++ b/web/modules/contrib/lightning_core/composer.json
@@ -101,6 +101,9 @@
         "acquia/lightning_dev": "dev-8.x-1.x",
         "drupal/console": "^1.6"
     },
+    "conflict": {
+        "drupal/drupal-extension": "<3.4.0"
+    },
     "autoload": {
         "classmap": ["tests/contexts/AwaitTrait.inc"]
     }
