--- a/web/modules/contrib/lightning_core/modules/lightning_page/lightning_page.info.yml
+++ b/web/modules/contrib/lightning_core/modules/lightning_page/lightning_page.info.yml
@@ -5,9 +5,10 @@ type: module
 description: 'Provides a "Basic Page" content type that is, indeed, very basic.'
 dependencies:
   - lightning_core
+  - node
 
-# Information added by Drupal.org packaging script on 2018-03-28
-version: '8.x-2.2'
+# Information added by Drupal.org packaging script on 2018-04-17
+version: '8.x-2.3'
 core: '8.x'
 project: 'lightning_core'
-datestamp: 1522268281
+datestamp: 1523980095
