--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "drupal/search_api_solr": "1.x-dev",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/views_bootstrap": "^3.0",
+        "drupal/views_bulk_operations": "^2.2",
         "drush/drush": "^8.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
