--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -96,6 +96,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_bulk_operations: 0
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
