--- a/web/sites/default/config/views.view.city_group_content.yml
+++ b/web/sites/default/config/views.view.city_group_content.yml
@@ -219,7 +219,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          batch: true
+          batch: false
           batch_size: 10
           form_step: true
           buttons: false
