POWR-62: disabled Save option in VBO field in Group content view, seems superfluous

--- a/web/sites/default/config/views.view.city_group_content.yml
+++ b/web/sites/default/config/views.view.city_group_content.yml
@@ -239,14 +239,12 @@ display:
             pathauto_update_alias: 0
             'entity:delete_action:node': 'entity:delete_action:node'
             'entity:publish_action:node': 'entity:publish_action:node'
-            'entity:save_action:node': 'entity:save_action:node'
+            'entity:save_action:node': 0
             'entity:unpublish_action:node': 'entity:unpublish_action:node'
           preconfiguration:
             'entity:delete_action:node':
               label_override: ''
             'entity:publish_action:node':
-              label_override: ''
-            'entity:save_action:node':
               label_override: ''
             'entity:unpublish_action:node':
               label_override: ''
