POWR-59 Add community actions block to homepage.

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -106,3 +106,5 @@ redirect: 1.1.0
 redirect_404: 1.1.0
 textarea_widget_for_text: 1.1.0
 views_bulk_operations: 2.2.0
+page_manager: 0.0.0
+page_manager_ui: 0.0.0
