--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -69,6 +69,8 @@ module:
   openapi_redoc: 0
   options: 0
   page_cache: 0
+  page_manager: 0
+  page_manager_ui: 0
   panelizer: 0
   panelizer_quickedit: 0
   panels: 0
