POWR-119 Add "Official organization name" and "Shortname or acronym" fields to bureau and program groups.

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
@@ -12,15 +14,15 @@ bundle: bureau_office
 mode: default
 content:
   field_summary:
-    weight: -2
-    label: above
+    type: string
+    weight: 2
+    region: content
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
   field_topics:
-    weight: -3
+    weight: 1
     label: above
     settings:
       link: true
@@ -30,7 +32,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: -5
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -38,4 +40,6 @@ content:
 hidden:
   changed: true
   created: true
+  field_official_organization_name: true
+  field_shortname_or_acronym: true
   uid: true
