--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.program.field_official_organization_name
+    - field.field.group.program.field_shortname_or_acronym
     - group.type.program
 id: group.program.default
 targetEntityType: group
@@ -12,7 +14,7 @@ content:
   label:
     label: hidden
     type: string
-    weight: -5
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -20,4 +22,6 @@ content:
 hidden:
   changed: true
   created: true
+  field_official_organization_name: true
+  field_shortname_or_acronym: true
   uid: true
