--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -3,18 +3,34 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
-  module:
-    - path
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_official_organization_name:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_shortname_or_acronym:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_summary:
-    weight: 33
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -22,7 +38,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 32
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -32,17 +48,12 @@ content:
     region: content
   label:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  path: true
   uid: true
