--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -3,27 +3,38 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.program.field_official_organization_name
+    - field.field.group.program.field_shortname_or_acronym
     - group.type.program
-  module:
-    - path
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_official_organization_name:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_shortname_or_acronym:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   label:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  path: true
   uid: true
