POWR-60 homepage actions and topic block updates.

--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - page_manager.page.frontpage
     - views.view.community_actions
+    - views.view.topics
   module:
     - panels
     - views
@@ -23,6 +24,17 @@ variant_settings:
       region: content
       weight: 0
       uuid: 828ef4e2-871e-42b7-baec-1377e49d97a0
+      context_mapping: {  }
+    a9d59952-4724-44eb-be56-8b0f734491d0:
+      id: 'views_block:topics-block_1'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: a9d59952-4724-44eb-be56-8b0f734491d0
       context_mapping: {  }
   id: panels_variant
   uuid: 1cbab72a-c89f-41e2-a24f-6b48487cc61d
