--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -1,16 +1,16 @@
-uuid: 1f8f619f-ea8c-4cb5-bb25-1903fb2d889f
+uuid: 23535452-9ce0-46aa-8782-53d75d802c52
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.community_actions
+    - taxonomy.vocabulary.topics
   module:
     - taxonomy
     - user
-id: community_actions
-label: 'Community actions'
+id: topics
+label: Topics
 module: views
-description: 'Homepage menu of actions a community member might take in interacting with the city.'
+description: 'Homepage menu of topics a community member might use to find content within the city.'
 tag: ''
 base_table: taxonomy_term_field_data
 base_field: tid
@@ -56,15 +56,20 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 4
+          columns: 3
           automatic_width: true
           alignment: horizontal
           col_class_default: true
           col_class_custom: ''
           row_class_default: true
-          row_class_custom: ''
+          row_class_custom: 'container text-center align-items-center'
       row:
         type: fields
+        options:
+          default_field_elements: true
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         name:
           id: name
@@ -78,7 +83,7 @@ display:
           alter:
             alter_text: false
             text: ''
-            make_link: false
+            make_link: true
             path: ''
             absolute: false
             external: false
@@ -87,7 +92,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: ''
+            link_class: 'btn btn-primary'
             prefix: ''
             suffix: ''
             target: ''
@@ -103,13 +108,13 @@ display:
             preserve_tags: ''
             html: false
           element_type: h2
-          element_class: text-center
+          element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
+          element_wrapper_type: div
+          element_wrapper_class: text-center
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -138,10 +143,53 @@ display:
           table: taxonomy_term_field_data
           field: vid
           value:
-            community_actions: community_actions
+            topics: topics
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
+        tid_raw:
+          id: tid_raw
+          table: taxonomy_term_field_data
+          field: tid_raw
+          relationship: parent
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value:
+            min: ''
+            max: ''
+            value: ''
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: taxonomy_term
+          plugin_id: numeric
       sorts:
         weight:
           id: weight
@@ -157,11 +205,20 @@ display:
           entity_type: taxonomy_term
           entity_field: weight
           plugin_id: standard
-      title: 'Community actions'
+      title: Topics
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        parent:
+          id: parent
+          table: taxonomy_term_hierarchy
+          field: parent
+          relationship: none
+          group_type: group
+          admin_label: Parent
+          required: false
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
