POWR-60 Update homepage topics view

--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
@@ -7,6 +7,12 @@ dependencies:
     - taxonomy.vocabulary.topics
   module:
     - text
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: taxonomy_term.topics.full
 targetEntityType: taxonomy_term
 bundle: topics
