--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -53,16 +53,14 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: grid
+        type: html_list
         options:
           grouping: {  }
-          columns: 3
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: true
-          col_class_custom: ''
-          row_class_default: true
-          row_class_custom: 'container text-center align-items-center'
+          row_class: 'list-group-item list-group-item-primary'
+          default_row_class: false
+          type: ul
+          wrapper_class: item-list
+          class: list-group
       row:
         type: fields
         options:
@@ -71,6 +69,59 @@ display:
           separator: ''
           hide_empty: false
       fields:
+        view_taxonomy_term:
+          id: view_taxonomy_term
+          table: taxonomy_term_data
+          field: view_taxonomy_term
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          text: view
+          output_url_as_text: true
+          absolute: false
+          entity_type: taxonomy_term
+          plugin_id: entity_link
         name:
           id: name
           table: taxonomy_term_field_data
@@ -81,9 +132,9 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
-            make_link: true
+            alter_text: true
+            text: '<a href="{{ view_taxonomy_term }}" class="d-flex text-center"><h3>{{ name }}</h3></a>'
+            make_link: false
             path: ''
             absolute: false
             external: false
@@ -92,7 +143,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: 'btn btn-primary'
+            link_class: ''
             prefix: ''
             suffix: ''
             target: ''
@@ -107,13 +158,13 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: h2
+          element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: div
-          element_wrapper_class: text-center
+          element_wrapper_type: ''
+          element_wrapper_class: ''
           element_default_classes: false
           empty: ''
           hide_empty: false
@@ -122,7 +173,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
