--- a/web/sites/default/config/pathauto.pattern.city_service.yml
+++ b/web/sites/default/config/pathauto.pattern.city_service.yml
@@ -1,24 +1,22 @@
-uuid: 2e2b857a-6f2c-4828-9c2d-a2469ab3e77c
+uuid: fec5fa0a-05b6-4852-baf4-abcf820d038d
 langcode: en
 status: true
 dependencies:
   module:
-    - ctools
-    - group
+    - node
 id: city_service
 label: 'City service'
-type: 'canonical_entities:group_content'
-pattern: '[group_content:group:title]/services/[current-page:title]'
+type: 'canonical_entities:node'
+pattern: '[node:group:field_shortname_or_acronym]/services/[node:title]'
 selection_criteria:
-  680a543a-c8bd-40e6-8f4e-03f7cf2b2a7b:
-    id: 'entity_bundle:group_content'
+  9bb2926d-e4a2-42a2-8168-4e41e19ea731:
+    id: node_type
     bundles:
-      group_content_type_c088a2077a0c7: group_content_type_c088a2077a0c7
-      program-group_node-city_service: program-group_node-city_service
+      city_service: city_service
     negate: false
     context_mapping:
-      group_content: group_content
-    uuid: 680a543a-c8bd-40e6-8f4e-03f7cf2b2a7b
+      node: node
+    uuid: 9bb2926d-e4a2-42a2-8168-4e41e19ea731
 selection_logic: and
 weight: -9
 relationships: {  }
