--- a/web/sites/default/config/pathauto.pattern.group_title.yml
+++ b/web/sites/default/config/pathauto.pattern.group_title.yml
@@ -7,7 +7,7 @@ dependencies:
 id: group_title
 label: 'Group title'
 type: 'canonical_entities:group'
-pattern: '[group:title]'
+pattern: '[group:field_shortname_or_acronym]'
 selection_criteria: {  }
 selection_logic: and
 weight: -10
