POWR-68 Add a patch to subpathauto and run composer updates

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/subpathauto": "^1.0",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
@@ -115,6 +116,10 @@
           "drupal/group": {
             "2774827 - node:group functionality for adding node:group:title":
               "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch"
+          },
+          "drupal/subpathauto": {
+            "2875026 - Redirect module causes redirect back to unaliased path":
+              "https://www.drupal.org/files/issues/2875026-6.patch"
           }
         },
         "merge-plugin": {
