--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -108,3 +108,4 @@ textarea_widget_for_text: 1.1.0
 views_bulk_operations: 2.2.0
 page_manager: 0.0.0
 page_manager_ui: 0.0.0
+subpathauto: 1.0.0-beta1
