POWR-58 Create a City services list page view and add it to the main navigation

--- a/web/sites/default/config/views.view.services.yml
+++ b/web/sites/default/config/views.view.services.yml
@@ -1,19 +1,20 @@
-uuid: 8774c496-6ea0-47e5-9681-5af393255743
+uuid: 3472a5e1-4697-4806-b623-0212343fb064
 langcode: en
 status: true
 dependencies:
   config:
-    - group.type.bureau_office
+    - node.type.city_service
     - system.menu.main
   module:
-    - group
-id: bureaus_offices_list
-label: 'Bureaus and offices list'
+    - node
+    - user
+id: services
+label: Services
 module: views
 description: ''
 tag: ''
-base_table: groups_field_data
-base_field: id
+base_table: node_field_data
+base_field: nid
 core: 8.x
 display:
   default:
@@ -23,8 +24,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
@@ -69,10 +71,13 @@ display:
       row:
         type: fields
       fields:
-        label:
-          id: label
-          table: groups_field_data
-          field: label
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          settings:
+            link_to_entity: true
+          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
@@ -109,7 +114,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -119,8 +124,6 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: string
-          settings:
-            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -131,35 +134,43 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: null
-          entity_field: label
-          plugin_id: field
       filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
         type:
           id: type
-          table: groups_field_data
+          table: node_field_data
           field: type
           value:
-            bureau_office: bureau_office
-          entity_type: group
+            city_service: city_service
+          entity_type: node
           entity_field: type
           plugin_id: bundle
       sorts:
-        label:
-          id: label
-          table: groups_field_data
-          field: label
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          order: ASC
+          entity_type: node
+          entity_field: title
+          plugin_id: standard
           relationship: none
           group_type: group
           admin_label: ''
-          order: ASC
           exposed: false
           expose:
             label: ''
-          entity_type: group
-          entity_field: label
-          plugin_id: standard
-      title: 'Bureaus and offices'
+      title: Services
       header: {  }
       footer: {  }
       empty: {  }
@@ -172,6 +183,8 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
       tags: {  }
   page_1:
     display_plugin: page
@@ -180,16 +193,18 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: bureaus-offices
+      path: services
       menu:
         type: normal
-        title: 'Bureaus and offices'
+        title: Services
         menu_name: main
-        weight: -49
+        weight: -50
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
       tags: {  }
