POWR-58 Allow anon users to view group content

--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -12,4 +12,5 @@ audience: anonymous
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  1: 'view group'
+  0: 'view group'
+  2: 'view group_node:city_service entity'
