POWR-152 make city service mode and step fields optional for easier stub process.

--- a/web/sites/default/config/field.field.paragraph.service_mode.field_time_to_complete.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_time_to_complete.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: service_mode
 label: 'Time to complete'
 description: 'How long should it take to complete the step by step instructions to obtain this service? Provide an estimate that helps the community plan accordingly. Use customer service data to create your estimate if available.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
