--- a/web/sites/default/config/field.field.paragraph.service_mode.field_service_mode_list.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_service_mode_list.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: service_mode
 label: 'Service mode'
 description: 'Select one of the 4 primary service modes: online, in person, by email, and by phone.'
-required: true
+required: false
 translatable: false
 default_value:
   -
