--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_title.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_title.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: service_step
 label: 'Step title'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
