Remove branch name filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,9 +224,4 @@ workflows:
   version: 2
   test_and_deploy:
     jobs:
-      - run-behat-tests:
-          filters:
-            branches:
-              only:
-                #- master # list of branches to build
-                - /powr-118.*/ # or regexes
+      - run-behat-tests
