Comment out the line to sanitize DB

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,7 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             sleep 30s
             # Sanitize DB
-            terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
+            # terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
             # Clear cache
             # terminus drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
